@@ -21,19 +21,17 @@ public class Day18 implements AdventOfCode {
 
     @Override
     public Object solveA(List<String> input) {
-        HashSet<Point> boarder = new HashSet<>();
-
-        Point start = new Point(0,0);
-        boarder.add(start);
-        Point current = start;
+        Point current = new Point(0,0);
 
         ArrayList<Wall> walls = new ArrayList<>();
 
+        long wallLength = 0L;
         for (String line : input) {
             String len = line.split(" ")[1];
             String dir = line.split(" ")[0];
 
-            int length = Integer.parseInt(len,16);
+            int length = Integer.parseInt(len);
+            wallLength += length;
 
             Point endPoint  = switch (dir) {
                 case "R" -> new Point(current.getX()+length, current.getY());
@@ -50,84 +48,24 @@ public class Day18 implements AdventOfCode {
             }
             current=endPoint;
         }
-
-        long wallLength = lengthOfWalls(walls);
         long filling = areaBetweenWalls(walls);
-
-        System.out.println(wallLength);
-        System.out.println(filling);
-return wallLength+filling;
-        // for (String line : input) {
-       //     String[] parts = line.split(" ");
-       //     Direction direction = switch (parts[0]) {
-       //         case "R" -> Direction.EAST;
-       //         case "D" -> Direction.SOUTH;
-       //         case "L" -> Direction.WEST;
-       //         case "U" -> Direction.NORTH;
-       //         default -> throw new IllegalArgumentException(parts[1]);
-       //     };
-       //     int length = Integer.parseInt(parts[1]);
-//
-       //     for(int i=0; i<length; i++) {
-       //         current = current.getNext(direction);
-       //         boarder.add(current);
-       //     }
-       // }
-
-       // return floodFill(boarder)+boarder.size();
+        return wallLength+filling;
     }
-    private Integer floodFill(HashSet<Point> border) {
 
-        int maxX = MapUtil.getMaxX(border);
-        int maxY = MapUtil.getMaxY(border);
-        int minX = MapUtil.getMinX(border);
-        int minY = MapUtil.getMinY(border);
-
-        int fillCounter=0;
-        HashSet<Point> p2 = new HashSet<>();
-        for ( int y=minY+1; y<maxY; y++) {
-            boolean fill = false;
-            HashSet<Point> section = new HashSet<>();
-            for ( int x=minX; x<maxX; x++) {
-                Point p = new Point(x,y);
-                if (border.contains(p)) {
-                    section.add(p);
-                } else if(!section.isEmpty()) {
-                    boolean north=false, south=false;
-                    for (Point s : section) {
-                        if(border.contains(s.north())) north=true;
-                        if(border.contains(s.south())) south=true;
-                    }
-                    section.clear();;
-                    if(north && south) {
-                        fill = !fill;
-                    }
-                }
-                if (fill && !border.contains(p)){
-                    p2.add(p);
-                    fillCounter++;
-                }
-            }
-        }
-        return fillCounter;
-    }
- //8936270059 to low
     @Override
     public Object solveB(List<String> input) {
-        HashSet<Point> boarder = new HashSet<>();
 
-        Point start = new Point(0,0);
-        boarder.add(start);
-        Point current = start;
+        Point current = new Point(0,0);
 
         ArrayList<Wall> walls = new ArrayList<>();
 
+        long wallLength = 0L;
         for (String line : input) {
             String len = line.split(" ")[2].substring(2,7);
             String dir = line.split(" ")[2].substring(7,8);
 
             int length = Integer.parseInt(len,16);
-
+            wallLength += length;
             Point endPoint  = switch (dir) {
                 case "0" -> new Point(current.getX()+length, current.getY());
                 case "1" -> new Point(current.getX(), current.getY()+length);
@@ -143,58 +81,77 @@ return wallLength+filling;
             }
             current=endPoint;
         }
-        for(Wall w : walls) System.out.println(w);
-        long wallLength = lengthOfWalls(walls);
+
         long filling = areaBetweenWalls(walls);
 
         return filling + wallLength;
     }
-    private long lengthOfWalls(ArrayList<Wall> walls) {
-        Long length =0L;
-        for (Wall w : walls) {
-            length+=w.p1.getManhattanDistance(w.p2);
-        }
-        return length;
-    }
+
     private long areaBetweenWalls(ArrayList<Wall> walls) {
         var verticalWalls = walls.stream().filter(w -> w.p1.getX() == w.p2.getX()).collect(Collectors.toList());
+        var horizontalWalls = walls.stream().filter(w -> w.p1.getY() == w.p2.getY()).collect(Collectors.toList());
         Collections.sort(verticalWalls);
 
-        List<Integer> interestingPoints = verticalWalls.stream().map(w ->w.p1.getY()).collect(Collectors.toList());
-        interestingPoints.addAll(verticalWalls.stream().map(w ->w.p2.getY()).collect(Collectors.toList()));
-        interestingPoints = interestingPoints.stream().distinct().sorted().collect(Collectors.toList());
-        Long result = 0L;
+        long result = 0L;
+        List<Integer> interestingPoints = horizontalWalls.stream().map(w -> w.p1.getY()).distinct().sorted().toList();
 
         //check between interesting points
         for (int y=0; y<interestingPoints.size()-1; y++) {
+            if(interestingPoints.get(y+1)==interestingPoints.get(y)+1) continue;
             List<Integer> collidingPoints = getAllWalls(interestingPoints.get(y)+1, verticalWalls);
             int distance = 0;
-            for(int i=1; i<collidingPoints.size(); i=i+2) {
+            for(int i=1; i<=collidingPoints.size(); i=i+2) {
                 distance += (collidingPoints.get(i)-collidingPoints.get(i-1)-1);
             }
             int height = (interestingPoints.get(y+1)-interestingPoints.get(y)-1);
-            result+=distance*height;
+            result+=(long) distance*height;
         }
         //check actual I.P.
-        for (int y=0; y<interestingPoints.size(); y++) {
-            System.out.print("unclear point: "+interestingPoints.get(y));
-            List<Integer> collidingPoints = getAll Walls(interestingPoints.get(y)+1, verticalWalls);
-            System.out.println(" collisons:"+collidingPoints.size());
+        for (int y : interestingPoints) {
+            long counter=0L;
+            int lastX=-1;
+            boolean count =false;
+            List<Integer> collidingPoints = getAllWalls(y, verticalWalls);
+            boolean isFalseWall = false;
+            for(int x : collidingPoints) {
+                if(x==lastX) continue;
+                if(count && !isFalseWall) {
+                    counter+=(long) (x-lastX)-1L;
+                }
 
-
-
-
-
+                Integer tmpX = isRealWall(new Point(x,y), horizontalWalls, verticalWalls);
+                if( tmpX != null) {
+                    count=!count;
+                    lastX=tmpX;
+                } else {
+                    isFalseWall = !isFalseWall;
+                    lastX=x;
+                }
+            }
+            result+=counter;
 
         }
+
         return result;
     }
+    Integer isRealWall(Point point, List<Wall> horizontalWalls, List<Wall> verticalWalls) {
+        Collections.sort(verticalWalls);
+        Collections.sort(horizontalWalls);
+        Optional<Wall> oWall = horizontalWalls.stream().filter(hw->hw.p1.equals(point) || hw.p2.equals(point)).findAny();
+        if(oWall.isEmpty()) return point.getX();
+
+        Wall v1 = verticalWalls.stream().filter(w -> w.p1.equals(oWall.get().p1) || w.p2.equals(oWall.get().p1)).findAny().orElseThrow();
+        Wall v2 = verticalWalls.stream().filter(w -> w.p1.equals(oWall.get().p2) || w.p2.equals(oWall.get().p2)).findAny().orElseThrow();
+        if ((Math.max(v1.p1.getY(), v1.p2.getY()) > point.getY()) != (Math.max(v2.p1.getY(), v2.p2.getY()) > point.getY())) {
+            return oWall.get().p2.getX();
+        }
+        return null;
+    }
+
     private List<Integer> getAllWalls(int y, List<Wall> walls) {
-       // System.out.println("\ny="+y);
         List<Integer> collisions = new ArrayList<>();
         for ( Wall w : walls) {
-         //   System.out.println(w.p1.getY()+" - "+w.p2.getY()+" "+(w.p1.getY()<=y && w.p2.getY()>=y));
-            if(w.p1.getY()<y && w.p2.getY()>y)
+            if(w.p1.getY()<=y && w.p2.getY()>=y)
                 collisions.add(w.p1.getX());
         }
         return collisions;
